Projeto_Inicial_ESTUDO/force-app/main/default/objects/Cliente__c/Cliente__c.object-meta.xml
<CustomObject>

    <label>Cliente</label>

    <pluralLabel>Clientes</pluralLabel>

    <nameField>
        <label>Nome do Cliente</label>
        <type>Text</type>
    </nameField>


    <sharingModel>ReadWrite</sharingModel>

</CustomObject>