Projeto_Inicial_ESTUDO/force-app/main/default/objects/Cliente__c/fields/CPF__c.field-meta.xml
<CustomField>

    <fullName>CPF__c</fullName>

    <label>CPF</label>

    <type>Text</type>

    <length>14</length>

</CustomField>