Projeto_Inicial_ESTUDO/force-app/main/default/objects/Cliente__c/fields/Endereco__c.field-meta.xml
<CustomField>

    <fullName>Endereco__c</fullName>

    <label>Endereço</label>

    <type>LongTextArea</type>

    <length>32000</length>


</CustomField>