Projeto_Inicial_ESTUDO/force-app/main/default/objects/Cliente__c/fields/Telefone__c.field-meta.xml
<CustomField>

    <fullName>Telefone__c</fullName>

    <label>Telefone</label>

    <type>Phone</type>

</CustomField>